tests/fixtures/errors/postprocess/postprocess/invalid-stdout-typo.js
module.exports = require("./hack")(async () => ({
  exitCode: 0,
  stdout: JSON.stringify({
    newOutput: "main.min.js",
  }),
}));
